--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ header{
   }
 
   .member {
-    margin: -20% -7%;
+    /* margin: -20% -7%; */
     background: #1f2833;
     border-radius: 15px;
     width: 300px;
@@ -787,6 +787,6 @@ section {
     padding: 20px 25px;
   }
 
-#FAQ{
-  margin-top: -20%;
-}
+/* #FAQ{ */
+  /* margin-top: -20%; */
+/* } */
